[Step 7a] STR and FMT string formatters